--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,6 +22,9 @@
         <Style TargetType="ComboBox" BasedOn="{StaticResource MaterialDesignComboBox}">
             <Setter Property="MinWidth" Value="65" />
         </Style>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignTextBox}">
+            <Setter Property="MinWidth" Value="36"/>
+        </Style>
     </Window.Resources>
     <StackPanel Margin="10">
         <StackPanel Orientation="Horizontal">
@@ -38,34 +41,56 @@
             <Button x:Name="btnConnect" Click="BtnConnect_Click">连接</Button>
             <Button x:Name="btnStatus" Click="BtnStatus_Click">获取状态</Button>
         </StackPanel>
-        <StackPanel Orientation="Vertical">
-            <TextBlock Margin="0,0,0,5">三自由度平移台</TextBlock>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Bottom">X</TextBlock>
-                <TextBox MinWidth="24" Margin="5,0,5,0"/>
-                <TextBlock VerticalAlignment="Bottom">mm</TextBlock>
-                <Button Margin="5,0">前进</Button>
-                <Button>后退</Button>
+        <GroupBox Header="三自由度平移台">
+            <StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="0,0,10,0">X</TextBlock>
+                    <TextBlock>位置</TextBlock>
+                    <TextBox x:Name="xPosBox" IsEnabled="False"/>
+                    <TextBlock>速度</TextBlock>
+                    <TextBox x:Name="xSpeedBox"/>
+                    <TextBlock>加速度</TextBlock>
+                    <TextBox x:Name="xAccBox"/>
+                    <TextBlock>目标位置</TextBlock>
+                    <TextBox x:Name="xTarBox"/>
+                    <TextBlock FontSize="10">（单位：mm）</TextBlock>
+                    <Button Margin="5,0">前进</Button>
+                    <Button>后退</Button>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="0,0,10,0">Y</TextBlock>
+                    <TextBlock>位置</TextBlock>
+                    <TextBox x:Name="yPosBox" IsEnabled="False"/>
+                    <TextBlock>速度</TextBlock>
+                    <TextBox x:Name="ySpeedBox"/>
+                    <TextBlock>加速度</TextBlock>
+                    <TextBox x:Name="yAccBox"/>
+                    <TextBlock>目标位置</TextBlock>
+                    <TextBox x:Name="yTarBox"/>
+                    <TextBlock FontSize="10">（单位：mm）</TextBlock>
+                    <Button Margin="5,0">前进</Button>
+                    <Button>后退</Button>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="0,0,10,0">Z</TextBlock>
+                    <TextBlock>位置</TextBlock>
+                    <TextBox x:Name="zPosBox" IsEnabled="False"/>
+                    <TextBlock>速度</TextBlock>
+                    <TextBox x:Name="zSpeedBox"/>
+                    <TextBlock>加速度</TextBlock>
+                    <TextBox x:Name="zAccBox"/>
+                    <TextBlock>目标位置</TextBlock>
+                    <TextBox x:Name="zTarBox"/>
+                    <TextBlock FontSize="10">（单位：mm）</TextBlock>
+                    <Button Margin="5,0">前进</Button>
+                    <Button>后退</Button>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Button Style="{StaticResource MaterialDesignRaisedLightButton}">运行</Button>
+                    <Button Margin="5,0,0,0" Style="{StaticResource MaterialDesignRaisedAccentButton}">停止</Button>
+                </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Bottom">Y</TextBlock>
-                <TextBox MinWidth="24" Margin="5,0,5,0"/>
-                <TextBlock VerticalAlignment="Bottom">mm</TextBlock>
-                <Button Margin="5,0">前进</Button>
-                <Button>后退</Button>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Bottom">Z</TextBlock>
-                <TextBox MinWidth="24" Margin="5,0,5,0"/>
-                <TextBlock VerticalAlignment="Bottom">mm</TextBlock>
-                <Button Margin="5,0">前进</Button>
-                <Button>后退</Button>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Button Click="Button_Click" Style="{StaticResource MaterialDesignRaisedLightButton}">运行</Button>
-                <Button Margin="5,0,0,0" Style="{StaticResource MaterialDesignRaisedAccentButton}">停止</Button>
-            </StackPanel>
-        </StackPanel>
+        </GroupBox>
         <ScrollViewer MaxHeight="160" VerticalScrollBarVisibility="Auto">
             <TextBlock x:Name="debugBlock" />
         </ScrollViewer>
