功能：基本完成电机的启停 修复：串口不能重启的问题 优化：用 Task 的方法重写了读串口的并行操作

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -86,8 +86,8 @@
                     <Button>后退</Button>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button Style="{StaticResource MaterialDesignRaisedLightButton}">运行</Button>
-                    <Button Margin="5,0,0,0" Style="{StaticResource MaterialDesignRaisedAccentButton}">停止</Button>
+                    <Button Click="BtnRun_Click" Style="{StaticResource MaterialDesignRaisedLightButton}">运行</Button>
+                    <Button Click="BtnStop_Click" Margin="5,0,0,0" Style="{StaticResource MaterialDesignRaisedAccentButton}">停止</Button>
                 </StackPanel>
             </StackPanel>
         </GroupBox>
