--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -49,13 +49,15 @@
                     <TextBox x:Name="xPosBox" IsEnabled="False"/>
                     <TextBlock>速度</TextBlock>
                     <TextBox x:Name="xSpeedBox"/>
+                    <TextBlock>最大速度</TextBlock>
+                    <TextBox x:Name="xMaxSpeedBox"/>
                     <TextBlock>加速度</TextBlock>
                     <TextBox x:Name="xAccBox"/>
                     <TextBlock>目标位置</TextBlock>
                     <TextBox x:Name="xTarBox"/>
                     <TextBlock FontSize="10">（单位：mm）</TextBlock>
-                    <Button Margin="5,0">前进</Button>
-                    <Button>后退</Button>
+                    <Button Margin="5,0" x:Name="xForwardBtn" Click="BtnForward_Click">前进</Button>
+                    <Button Click="BtnBackward_Click">后退</Button>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Margin="0,0,10,0">Y</TextBlock>
@@ -63,6 +65,8 @@
                     <TextBox x:Name="yPosBox" IsEnabled="False"/>
                     <TextBlock>速度</TextBlock>
                     <TextBox x:Name="ySpeedBox"/>
+                    <TextBlock>最大速度</TextBlock>
+                    <TextBox x:Name="yMaxSpeedBox"/>
                     <TextBlock>加速度</TextBlock>
                     <TextBox x:Name="yAccBox"/>
                     <TextBlock>目标位置</TextBlock>
@@ -77,6 +81,8 @@
                     <TextBox x:Name="zPosBox" IsEnabled="False"/>
                     <TextBlock>速度</TextBlock>
                     <TextBox x:Name="zSpeedBox"/>
+                    <TextBlock>最大速度</TextBlock>
+                    <TextBox x:Name="zMaxSpeedBox"/>
                     <TextBlock>加速度</TextBlock>
                     <TextBox x:Name="zAccBox"/>
                     <TextBlock>目标位置</TextBlock>
